# tinygrad-u-net

./: .gitignore  LICENSE  README.md  bicubic_convolution.py  data  dataset.py  error.py  get_val_from_train.py  helpers.py  inference.py  input_transform.py  main.py  net.py  pyproject.toml  tinygrad  train.py  train.sh  util.py
extra/: cell_dataset_generator.py  comparison.py  infer_and_arrange.py  input_filtering.py  test_transforms.py
scripts/: augument.py  dataset.py  train.py  train_with_augument.sh
tinygrad_unet/dataset/: __init__.py
tinygrad_unet/inference/: __init__.py
tinygrad_unet/util/: __init__.py
